sdk-kit/turso.h

typedef enum
{
    TURSO_OK = 0,
    TURSO_DONE = 1,
    TURSO_ROW = 2,
    TURSO_IO = 3,
    TURSO_BUSY = 4,
    TURSO_INTERRUPT = 5,
    TURSO_BUSY_SNAPSHOT = 6,
    TURSO_ERROR = 127,
    TURSO_MISUSE = 128,
    TURSO_CONSTRAINT = 129,
    TURSO_READONLY = 130,
    TURSO_DATABASE_FULL = 131,
    TURSO_NOTADB = 132,
    TURSO_CORRUPT = 133,
    TURSO_IOERR = 134,
} turso_status_code_t;
typedef struct
{
    turso_extension_value_type_t value_type;
    turso_extension_value_data_t value;
} turso_value_t;
typedef struct
{
    void *state;
} turso_agg_ctx_t;
/** Frees per-registration state supplied to scalar, aggregate, or collation callbacks. */
typedef void (*turso_context_destructor_t)(uintptr_t context);
/** Frees a value returned by a managed scalar or aggregate callback after Turso copies it. */
typedef void (*turso_value_destructor_t)(turso_value_t *result);
/** Scalar callback. argv points to argc immutable turso_value_t entries valid only for the call. */
typedef turso_value_t (*turso_scalar_function_t)(uintptr_t context, int32_t argc, const turso_value_t *argv, turso_context_destructor_t context_destructor, turso_value_destructor_t value_destructor);
/** Aggregate initializer. Return value is passed unchanged to step/final/destructor callbacks. */
typedef turso_agg_ctx_t *(*turso_aggregate_init_function_t)(uintptr_t context);
/** Aggregate step callback. argv points to argc immutable turso_value_t entries valid only for the call. */
typedef turso_value_t (*turso_aggregate_step_function_t)(uintptr_t context, turso_agg_ctx_t *aggregate_context, int32_t argc, const turso_value_t *argv);
/** Aggregate final callback. The aggregate_context is the value returned by the initializer. */
typedef turso_value_t (*turso_aggregate_final_function_t)(uintptr_t context, turso_agg_ctx_t *aggregate_context);
/** Collation callback. Byte ranges are UTF-8 text valid only for the call. Return follows strcmp ordering. */
typedef int32_t (*turso_collation_function_t)(uintptr_t context, const uint8_t *left_ptr, size_t left_len, const uint8_t *right_ptr, size_t right_len);
/// opaque pointer to the TursoDatabase instance
/// SAFETY: the database must be opened and closed only once but can be used concurrently
typedef struct turso_database turso_database_t;
/// opaque pointer to the TursoConnection instance
/// SAFETY: the connection must be used exclusive and can't be accessed concurrently
typedef struct turso_connection turso_connection_t;
/// opaque pointer to the TursoStatement instance
/// SAFETY: the statement must be used exclusive and can't be accessed concurrently
typedef struct turso_statement turso_statement_t;
typedef struct
{
    /* zero-terminated C string */
    const char *message;
    /* zero-terminated C string */
    const char *target;
    /* zero-terminated C string */
    const char *file;
    uint64_t timestamp;
    size_t line;
    turso_tracing_level_t level;
} turso_log_t;
typedef struct
{
    /// SAFETY: turso_log_t log argument fields have lifetime scoped to the logger invocation
    /// caller must ensure that data is properly copied if it wants it to have longer lifetime
    void (*logger)(const turso_log_t *log);
    /* zero-terminated C string */
    const char *log_level;
} turso_config_t;
typedef struct
{
    uint32_t abi_version;
    void *ctx;
    uint8_t reserved_space;
    /** Stable, non-secret identifier for this codec configuration. Must change whenever encoded bytes could differ. */
    uint8_t codec_id[16];
    turso_page_codec_destroy_t destroy;
    turso_page_codec_probe_header_t probe_header;
    turso_page_codec_transform_t decode_page;
    turso_page_codec_transform_t encode_page;
} turso_page_codec_v1_t;
/**
 * Database description.
 */
typedef struct
{
    /** Parameter which defines who drives the IO - callee or the caller (non-zero parameter value interpreted as async IO) */
    uint64_t async_io;
    /** Path to the database file or `:memory:`
     * zero-terminated C string
     */
    const char *path;
    /** Optional comma separated list of experimental features to enable
     * zero-terminated C string or null pointer
     */
    const char *experimental_features;
    /** optional VFS parameter explicitly specifying FS backend for the database.
     * Available options are:
     * - "memory": in-memory backend
     * - "syscall": generic syscall backend
     * - "io_uring": IO uring (supported only on Linux)
	 * - "experimental_win_iocp": Windows IOCP [experimental](supported only on Windows)
     */
    const char *vfs;
    /** optional encryption cipher
     * as encryption is experimental - experimental_features must have "encryption" in the list
     */
    const char *encryption_cipher;
    /** optional encryption hexkey
     * as encryption is experimental - experimental_features must have "encryption" in the list
     */
    const char *encryption_hexkey;
    /** optional external page codec; callback context must remain valid and thread-safe until destroy is called */
    const turso_page_codec_v1_t *page_codec;
    /** optional bitmask of turso_database_open_flags_t values */
    uint32_t open_flags;
} turso_database_config_t;
/** Setup global database info */
turso_status_code_t turso_setup(
    const turso_config_t *config,
    /** Optional return error parameter (can be null) */
    const char **error_opt_out);
/** Create database holder but do not open it */
turso_status_code_t turso_database_new(
    const turso_database_config_t *config,
    /** reference to pointer which will be set to database instance in case of TURSO_OK result */
    const turso_database_t **database,
    /** Optional return error parameter (can be null) */
    const char **error_opt_out);
/** Open database
 *  Can return TURSO_IO result if async_io=true is set
 */
turso_status_code_t turso_database_open(
    const turso_database_t *database,
    /** Optional return error parameter (can be null) */
    const char **error_opt_out);
/** Connect to the database */
turso_status_code_t turso_database_connect(
    const turso_database_t *self,
    /** reference to pointer which will be set to connection instance in case of TURSO_OK result */
    turso_connection_t **connection,
    /** Optional return error parameter (can be null) */
    const char **error_opt_out);
/** Set busy timeout for the connection */
void turso_connection_set_busy_timeout_ms(const turso_connection_t *self, int64_t timeout_ms);
/** Get autocommit state of the connection */
bool turso_connection_get_autocommit(const turso_connection_t *self);
/** Get last insert rowid for the connection or 0 if no inserts happened before */
int64_t turso_connection_last_insert_rowid(const turso_connection_t *self);
/** Register or replace a per-connection managed scalar function. */
turso_status_code_t turso_connection_register_scalar_function(
    const turso_connection_t *self,
    const char *name,
    int32_t argc,
    bool deterministic,
    uintptr_t context,
    turso_scalar_function_t callback,
    turso_context_destructor_t context_destructor,
    turso_value_destructor_t value_destructor,
    const char **error_opt_out);
/** Register or replace a per-connection managed aggregate function. */
turso_status_code_t turso_connection_register_aggregate_function(
    const turso_connection_t *self,
    const char *name,
    int32_t argc,
    uintptr_t context,
    turso_aggregate_init_function_t init,
    turso_aggregate_step_function_t step,
    turso_aggregate_final_function_t finalize,
    turso_context_destructor_t context_destructor,
    turso_context_destructor_t aggregate_destructor,
    turso_value_destructor_t value_destructor,
    const char **error_opt_out);
/** Unregister a per-connection managed scalar or aggregate function. */
turso_status_code_t turso_connection_unregister_function(
    const turso_connection_t *self,
    const char *name,
    const char **error_opt_out);
/** Register or replace a per-connection managed collation. */
turso_status_code_t turso_connection_register_collation(
    const turso_connection_t *self,
    const char *name,
    uintptr_t context,
    turso_collation_function_t callback,
    turso_context_destructor_t context_destructor,
    const char **error_opt_out);
/** Unregister a per-connection managed collation. */
turso_status_code_t turso_connection_unregister_collation(
    const turso_connection_t *self,
    const char *name,
    const char **error_opt_out);
/** Enable or disable SQL load_extension() for this connection. */
turso_status_code_t turso_connection_enable_load_extension(
    const turso_connection_t *self,
    bool enabled,
    const char **error_opt_out);
/** Load an extension library on this connection using Turso's native extension loader. */
turso_status_code_t turso_connection_load_extension(
    const turso_connection_t *self,
    const char *path,
    const char **error_opt_out);
/** Prepare single statement in a connection */
turso_status_code_t
turso_connection_prepare_single(
    const turso_connection_t *self,
    /* zero-terminated C string */
    const char *sql,
    /** reference to pointer which will be set to statement instance in case of TURSO_OK result */
    turso_statement_t **statement,
    /** Optional return error parameter (can be null) */
    const char **error_opt_out);
/** Prepare first statement in a string containing multiple statements in a connection */
turso_status_code_t
turso_connection_prepare_first(
    const turso_connection_t *self,
    /* zero-terminated C string */
    const char *sql,
    /** reference to pointer which will be set to statement instance in case of TURSO_OK result; can be null if no statements can be parsed from the input string */
    turso_statement_t **statement,
    /** offset in the sql string right after the parsed statement */
    size_t *tail_idx,
    /** Optional return error parameter (can be null) */
    const char **error_opt_out);
/** close the connection preventing any further operations executed over it
 * caller still need to call deinit method to reclaim memory from the instance holding connection
 * SAFETY: caller must guarantee that no ongoing operations are running over connection before calling turso_connection_close(...) method
 */
turso_status_code_t turso_connection_close(
    const turso_connection_t *self,
    /** Optional return error parameter (can be null) */
    const char **error_opt_out);
/** Execute single statement
 * execute returns TURSO_DONE if execution completed
 * execute returns TURSO_IO if async_io was set and execution needs IO in order to make progress
 */
turso_status_code_t turso_statement_execute(
    const turso_statement_t *self,
    uint64_t *rows_changes,
    /** Optional return error parameter (can be null) */
    const char **error_opt_out);
/** Step statement execution once
 * Returns TURSO_DONE if execution finished
 * Returns TURSO_ROW if execution generated the row (row values can be inspected with corresponding statement methods)
 * Returns TURSO_IO if async_io was set and statement needs to execute IO to make progress
 */
turso_status_code_t turso_statement_step(const turso_statement_t *self, const char **error_opt_out);
/** Execute one iteration of underlying IO backend after TURSO_IO status code
 * This function either return some ERROR status or TURSO_OK
 */
turso_status_code_t turso_statement_run_io(const turso_statement_t *self, const char **error_opt_out);
/** Reset a statement
 * This method must be called in order to cleanup statement resources and prepare it for re-execution
 * Any pending execution will be aborted - be careful and in certain cases ensure that turso_statement_finalize called before turso_statement_reset
 */
turso_status_code_t turso_statement_reset(const turso_statement_t *self, const char **error_opt_out);
/** Finalize a statement
 * finalize returns TURSO_DONE if finalization completed
 * This method must be called in the end of statement execution (either successfull or not)
 */
turso_status_code_t turso_statement_finalize(const turso_statement_t *self, const char **error_opt_out);
/** return amount of row modifications (insert/delete operations) made by the most recent executed statement */
int64_t turso_statement_n_change(const turso_statement_t *self);
/** Get column count */
int64_t turso_statement_column_count(const turso_statement_t *self);
/** Get the column name at the index
 * C string allocated by Turso must be freed after the usage with corresponding turso_str_deinit(...) method
 */
const char *turso_statement_column_name(const turso_statement_t *self, size_t index);
/** Get the column declared type at the index (e.g. "INTEGER", "TEXT", "DATETIME", etc.)
 * Returns NULL if the column type is not available.
 * C string allocated by Turso must be freed after the usage with corresponding turso_str_deinit(...) method
 */
const char *turso_statement_column_decltype(const turso_statement_t *self, size_t index);
/** Deallocate C string allocated by Turso */
void turso_str_deinit(const char *self);